Signed-off-by: Guillaume Fafard <guillaume@next-media.org>

--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= error_messages_for(@pages) %>
+<%= error_messages_for(@page) %>
 <table summary="Page form fields">
   <tr>
     <th><%= f.label(:subject_id, "Subject")%></th>
