--- a/app/views/access/menu.html.erb
+++ b/app/views/access/menu.html.erb
@@ -7,6 +7,6 @@
 		<li><%= link_to("Manage Subjects", :controller => 'subjects')%> </li>
 		<li><%= link_to("Manage Pages", :controller => 'pages')%> </li>
 		<li><%= link_to("Manage Sections", :controller => 'sections')%> </li>
-		<li><%= link_to("Manage Admin Users", :controller => '#')%> </li>
+		<li><%= link_to("Manage Admin Users", :controller => 'admin_users')%> </li>
 		<li><%= link_to("Logout", :action => 'logout')%> </li>
 </div>
